Update azd up for container apps api and resolve some code issues

--- a/azure.yaml
+++ b/azure.yaml
@@ -10,6 +10,12 @@ services:
     host: containerapp
     docker:
       remoteBuild: true
+  api:
+    project: ./app/api
+    language: py
+    host: containerapp
+    docker:
+      remoteBuild: true
 hooks:
     postprovision:
       windows:
